--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 .principal{
-	background: #CCCCCC;
+	background: #fafafa;
 	padding: 30px;
 }
 
@@ -24,7 +24,7 @@ p {
 }
 
 em strong {
-	color: #FF0000;
+	color: #ff00bf;
 }
 
 .itens {
@@ -32,7 +32,7 @@ em strong {
 }
 
 .beneficios {
-	background: #FFFFFF;
+	background: #a7faf6;
 	padding: 20px;
 }
 
